[기능추가][3,4,5단계] LottoNumber 추가